--- a/webapp/WEB-INF/views/course/r_writeForm.html
+++ b/webapp/WEB-INF/views/course/r_writeForm.html
@@ -43,7 +43,7 @@
 						<div class="course-info">
 							<div>
 								<p>코스 제목</p>
-								<h3>우리집 지름길</h3>
+								<span>우리집 지름길</span>
 							</div>
 							
 							<div>
@@ -61,17 +61,17 @@
 							
 							<div>
 								<p>거리</p>
-								<h3>1</h3>
-								<p>km<p>
+								<span>1</span>
+								<span>km</span>
 								<!-- <p>m</p> -->
 							</div>
 							
 							<div>
 								<p>예상 시간</p>
-								<h3>0</h3>
-								<p>시간</p>
-								<h3>30</h3>
-								<p>분</p>
+								<span>0</span>
+								<span>시간</span>
+								<span>30</span>
+								<span>분</span>
 							</div>
 							
 							<div>
