--- a/webapp/WEB-INF/views/course/r_writeForm.html
+++ b/webapp/WEB-INF/views/course/r_writeForm.html
@@ -143,7 +143,7 @@
 					<th>기온</th>
 					<td>
 						<input class="txt-short" type="text">
-						<p><b>℃</b></p>
+						<p class="bold">℃</p>
 					</td>
 				</tr>
 				
