--- a/webapp/assets/css/course_view.css
+++ b/webapp/assets/css/course_view.css
@@ -130,7 +130,8 @@ input[type=radio] {display:none;}
 }
 .record-status .graphs #myChart {
 	width: 100%;
-	height: 100%;
+	height: 140px;
+	
 }
 
 
