함께하기 완

--- a/webapp/WEB-INF/views/together/together.html
+++ b/webapp/WEB-INF/views/together/together.html
@@ -15,11 +15,11 @@
 		
 		<div id="top_side">
 			<ul>
-				<li><a href="">전체</a></li>
-				<li>|</li>
-				<li><a href="">진행중</a></li>
-				<li>|</li>
-				<li><a href="">마감</a></li>
+				<li class="category"><a href="">전체</a></li>
+				<li class="category">|</li>
+				<li class="category"><a href="">진행중</a></li>
+				<li class="category">|</li>
+				<li class="category"><a href="">마감</a></li>
 			</ul>
 		</div><!-- top_side -->
 			
@@ -62,10 +62,10 @@
 					</thead>
 					<tbody>
 						<tr>
-							<th colspan="2">쭈쭈네 동네 한바퀴</th>
+							<th colspan="2" class="content">쭈쭈네 동네 한바퀴</th>
 						</tr>
 						<tr>
-							<th colspan="2"><span class="glyphicon glyphicon-map-marker" class="marking"></span>신림 - 잠실</th>
+							<th colspan="2" class="content_course"><span class="glyphicon glyphicon-map-marker" class="marking"></span>신림 - 잠실</th>
 						</tr>
 						<tr>
 							<th colspan="2" class="line_bottom">
@@ -91,10 +91,10 @@
 					</thead>
 					<tbody>
 						<tr>
-							<th colspan="2">쭈쭈네 동네 한바퀴</th>
+							<th colspan="2" class="content">쭈쭈네 동네 한바퀴</th>
 						</tr>
 						<tr>
-							<th colspan="2"><span class="glyphicon glyphicon-map-marker" class="marking"></span>신림 - 잠실</th>
+							<th colspan="2" class="content_course"><span class="glyphicon glyphicon-map-marker" class="marking"></span>신림 - 잠실</th>
 						</tr>
 						<tr>
 							<th colspan="2" class="line_bottom">
@@ -120,10 +120,10 @@
 					</thead>
 					<tbody>
 						<tr>
-							<th colspan="2">쭈쭈네 동네 한바퀴</th>
+							<th colspan="2" class="content">쭈쭈네 동네 한바퀴</th>
 						</tr>
 						<tr>
-							<th colspan="2"><span class="glyphicon glyphicon-map-marker" class="marking"></span>신림 - 잠실</th>
+							<th colspan="2" class="content_course"><span class="glyphicon glyphicon-map-marker" class="marking"></span>신림 - 잠실</th>
 						</tr>
 						<tr>
 							<th colspan="2" class="line_bottom">
@@ -149,10 +149,10 @@
 					</thead>
 					<tbody>
 						<tr>
-							<th colspan="2">쭈쭈네 동네 한바퀴</th>
+							<th colspan="2" class="content">쭈쭈네 동네 한바퀴</th>
 						</tr>
 						<tr>
-							<th colspan="2"><span class="glyphicon glyphicon-map-marker" class="marking"></span>신림 - 잠실</th>
+							<th colspan="2" class="content_course"><span class="glyphicon glyphicon-map-marker" class="marking"></span>신림 - 잠실</th>
 						</tr>
 						<tr>
 							<th colspan="2" class="line_bottom">
