--- a/webapp/assets/css/together.css
+++ b/webapp/assets/css/together.css
@@ -29,10 +29,10 @@ a {
 	color: inherit;
 }
 #top_side {
-	margin-left: 43.5%;
-	margin-top: 15px;
-	
+	margin-left: 42.7%;
+	margin-top: 17px;
 }
+.category {	font-size: 20px;}
 
 /***************** 함께하기 만들기 버튼 *****************/
 
@@ -74,13 +74,15 @@ table {
 .line_top {
 	float: left;
 	margin-left: 58px;
-	font-size : 11pt;
+	font-size : 12pt;
 }
 .line_bottom {
-	margin-left: 20px;
+	padding-left: 117px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 	border-top: solid 1px #ccc;
 	color: #9e9e9e;
-	font-size : 12pt;
+	font-size : 13pt;
 }
 /** 북마크 버튼 **/
 .top {
@@ -88,6 +90,14 @@ table {
 	border-bottom: solid 1px #ccc;
 }
 .mark {background-color: #fff;}
+.content {
+	font-size : 13pt;
+	padding: 20px 0px 20px 100px;
+}
+.content_course {
+	font-size : 13pt;
+	padding: 20px 0px 20px 110px;
+}
 .bookmark {
 	margin-left: 12%;
 	margin-top: 5px;
@@ -107,7 +117,7 @@ table {
 /*************** 함께하기 리스트 더보기 버튼 ***************/
 
 #more_btn {
-	margin-top: 50px;
+	margin-top: 80px;
 	margin-left: 19%;
 }
 #more {
