--- a/webapp/WEB-INF/views/best/bestplus.html
+++ b/webapp/WEB-INF/views/best/bestplus.html
@@ -80,21 +80,46 @@
 			<br> <br> <br>
 
 			<div class="img-line">
-				<a href=""> <img src="C:\javaStudy\workspace_web\JOA\webapp\assets\images\poo613.jpg" />
-				</a> <a href=""> <img src="C:\javaStudy\workspace_web\JOA\webapp\assets\images\poo613.jpg" />
-				</a> <a href=""> <img src="C:\javaStudy\workspace_web\JOA\webapp\assets\images\poo613.jpg" />
-				</a>
-			</div>
+				<div class="img-list">
+					<a href=""> <img
+						src="C:\javaStudy\workspace_web\JOA\webapp\assets\images\poo613.jpg" />
+						<span id="best-text"> 지역 : <span>서울</span> | 거리 : <span>1km</span></span></a>
+				
+					<div class="comment-text">
+						<input type="text" name="comment" value="私の名前はウヨンウです。" size="43"><a href=""></a> 
+							<input type="text" name="comment" value="댓글이오" size="43"><a href=""></a> 
+							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="43"><a href=""></a> <br> 
+							<input type="button" name="button" value="더보기">
+					</div>
+				</div>
 
+				<div class="img-list">
+					<a href=""> <img src="C:\javaStudy\workspace_web\JOA\webapp\assets\images\poo613.jpg" />
+						<span id="best-text"> 지역 : <span>부산</span> | 거리 : <span>1km</span></span></a>
+					<div class="comment-text">
+						<input type="text" name="comment" value="私の名前はウヨンウです。" size="43"><a href=""></a> 
+							<input type="text" name="comment" value="댓글이오" size="43"><a href=""></a> 
+							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="43"><a href=""></a> <br> 
+							<input type="button" name="button" value="더보기">
+					</div>
+				</div>
+				
+				<div class="img-list">
+					<a href=""> <img
+						src="C:\javaStudy\workspace_web\JOA\webapp\assets\images\poo613.jpg" />
+						<span id="best-text"> 지역 : <span>인천</span> | 거리 : <span>1km</span></span></a>
+					<div class="comment-text">
+						<input type="text" name="comment" value="私の名前はウヨンウです。" size="43"><a href=""></a> 
+							<input type="text" name="comment" value="댓글이오" size="43"><a href=""></a> 
+							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="43"><a href=""></a> <br> 
+							<input type="button" name="button" value="더보기">
+					</div>
+				</div>
+			</div>
 		</div>
 
 		<br> <br> <br>
-		<div class="comment-text">
-		<input type="text" name="comment" value="私の名前はウヨンウです。"><a href=""></a>
-		<input type="text" name="comment" value="댓글이오"><a href=""></a>
-		<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!"><a href=""></a>
-		<input type="button" name="button" value="더보기">
-		</div>
+
 		<hr class="one">
 
 		<!-- Top4~6 -->
