--- a/webapp/assets/css/bestplus.css
+++ b/webapp/assets/css/bestplus.css
@@ -73,17 +73,17 @@ table td a:hover {
 
 /*------------------------- Top1~3 -------------------------*/
 /* Top 글씨 */
+.img-total .img-1{		/* 왕관 */
+	padding: 0px 20px 0px;
+}
+	
 .img-total .img-1 p {
 	font-size: 20px;
 	font-weight: bold;
 	display: inline;
-	margin-right:100px;
+	margin-right:110px;
 	margin-left: 175px;
 	text-align: center;
-	}
-	
-.img-total .img-1{		/* 왕관 */
-	padding: 0px 20px 0px;
 	}
 	
 .img-total .img-1 img{		/* 왕관 */
@@ -92,62 +92,31 @@ table td a:hover {
 	margin-top: 50px; 
 }
 
-/* 이미지 */
-.img-line {
-	display: block;
-	margin-left: 40px;
+/*--------------------- 이미지 ---------------------------*/
+.img-list {
+	float: left;
 }
 
 .img-line img {
 	width: 350px;
 	height: 280px;
-	margin: 0px 10px 0px 10px; 
-}
-/*----------------- comment 댓글 -----------------*/
-
-/*----------------- 푸터 스타일 -----------------*/
-.footer{
-	justify-content: space-between;
-	line-height: 18px;		/*줄 높이 설정값*/
-	font-size: 12px;
-	color: rgb(160, 160, 160);
-	background-color: rgb(55, 55, 55);
-	/* white-space: pre-wrap; 다방에 있어서 끌고 왔으나 와장창됨
-		스페이스와 탭, 줄바꿈, 자동줄바꿈을 어떻게 처리할지 정하는 속성*/
+	margin: 0px 0px 0px 40px;
+	display: block;
 }
 
-.footer-text {
-	padding-top: 20px;
-	padding-left: 15px;
-
+#best-text {		/* 지역, 거리 */
+	font-size: 14px;
+	color:  rgb(101, 101, 101);
+	display: block;
+	text-align: center;
+	margin: 10px 0px 10px 40px;
 }
 
-#footer-Copyright {
-    display: block;
-	line-height: 18px;		/*줄 높이 설정값*/
-	margin-top: 20px;
-	padding: 5px 0px 20px 15px;
-}
-
-.my-hr1 {
-	border: 0;
-	height: 1px;
-	width : 99%;
-	background-color: rgb(123, 118, 118);
-}
-/* ---------------------------- 푸터 버튼 -----------------------------------*/
-.footer-btn{
-	padding: 0px 9px;
+/*------------------------- 댓글 comment -------------------------*/
+.comment-text {
+	width: 80px;
+	padding: 0px 50px 20px;
+	text-align: left;
+	display: block;
 	
-}
-
-#footerbtn {
-	border: 0;
-	outline: 0;
-	border-radius: 2px;
-	height: 30px;
-	padding: 0px 9px;
-	font-size: 12px;
-	color: rgb(229, 229, 229);
-	background-color: rgb(81, 81, 81);
 }
