함께하기 재정리

--- a/webapp/WEB-INF/views/together/together.html
+++ b/webapp/WEB-INF/views/together/together.html
@@ -48,123 +48,125 @@
 			
 			<br><br><br>
 			
-			<div class="chart">
-				<table>
-					<thead>
-						<tr class="top">
-							<th class="line_top">2022/07/24 - 2022/07/30</th>
-							<th class="mark">
-								<button class="bookmark">
-									<img class="image" src="../../../assets/image/together/bookmarks_black.png">
-								</button>
-							</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<th colspan="2" class="content">쭈쭈네 동네 한바퀴</th>
-						</tr>
-						<tr>
-							<th colspan="2" class="content_course"><span class="glyphicon glyphicon-map-marker" class="marking"></span>신림 - 잠실</th>
-						</tr>
-						<tr>
-							<th colspan="2" class="line_bottom">
-								산책
-								<button type="submit" class="join"><span class="glyphicon glyphicon-user" id="join_icon"></span>11/15</button>
-							</th>
-						</tr>
-					</tbody>
-				</table>
-			</div><!-- table(chart) -->
-			
-			<div class="chart">
-				<table>
-					<thead>
-						<tr class="top">
-							<th class="line_top">2022/07/24 - 2022/07/30</th>
-							<th class="mark">
-								<button class="bookmark">
-									<img class="image" src="../../../assets/image/together/bookmarks_white.png">
-								</button>
-							</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<th colspan="2" class="content">쭈쭈네 동네 한바퀴</th>
-						</tr>
-						<tr>
-							<th colspan="2" class="content_course"><span class="glyphicon glyphicon-map-marker" class="marking"></span>신림 - 잠실</th>
-						</tr>
-						<tr>
-							<th colspan="2" class="line_bottom">
-								산책
-								<button type="submit" class="join"><span class="glyphicon glyphicon-user" id="join_icon"></span>11/15</button>
-							</th>
-						</tr>
-					</tbody>
-				</table>
-			</div><!-- table(chart) -->
-
-			<div class="chart">
-				<table>
-					<thead>
-						<tr class="top">
-							<th class="line_top">2022/07/24 - 2022/07/30</th>
-							<th class="mark">
-								<button class="bookmark">
-									<img class="image" src="../../../assets/image/together/bookmarks_white.png">
-								</button>
-							</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<th colspan="2" class="content">쭈쭈네 동네 한바퀴</th>
-						</tr>
-						<tr>
-							<th colspan="2" class="content_course"><span class="glyphicon glyphicon-map-marker" class="marking"></span>신림 - 잠실</th>
-						</tr>
-						<tr>
-							<th colspan="2" class="line_bottom">
-								산책
-								<button type="submit" class="join"><span class="glyphicon glyphicon-user" id="join_icon"></span>11/15</button>
-							</th>
-						</tr>
-					</tbody>
-				</table>
-			</div><!-- table(chart) -->
-			
-			<div class="chart">
-				<table>
-					<thead>
-						<tr class="top">
-							<th class="line_top">2022/07/24 - 2022/07/30</th>
-							<th class="mark">
-								<button class="bookmark">
-									<img class="image" src="../../../assets/image/together/bookmarks_white.png">
-								</button>
-							</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<th colspan="2" class="content">쭈쭈네 동네 한바퀴</th>
-						</tr>
-						<tr>
-							<th colspan="2" class="content_course"><span class="glyphicon glyphicon-map-marker" class="marking"></span>신림 - 잠실</th>
-						</tr>
-						<tr>
-							<th colspan="2" class="line_bottom">
-								산책
-								<button type="submit" class="join"><span class="glyphicon glyphicon-user" id="join_icon"></span>11/15</button>
-							</th>
-						</tr>
-					</tbody>
-				</table>
-			</div><!-- table(chart) -->
+			<div id="list">
+				<div class="chart">
+					<table>
+						<thead>
+							<tr class="top">
+								<th class="line_top">2022/07/24 - 2022/07/30</th>
+								<th class="mark">
+									<button class="bookmark">
+										<img class="image" src="../../../assets/image/together/bookmarks_black.png">
+									</button>
+								</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<th colspan="2" class="content">쭈쭈네 동네 한바퀴</th>
+							</tr>
+							<tr>
+								<th colspan="2" class="content_course"><span class="glyphicon glyphicon-map-marker" class="marking"></span>신림 - 잠실</th>
+							</tr>
+							<tr>
+								<th colspan="2" class="line_bottom">
+									산책
+									<button type="submit" class="join"><span class="glyphicon glyphicon-user" id="join_icon"></span>11/15</button>
+								</th>
+							</tr>
+						</tbody>
+					</table>
+				</div><!-- table(chart) -->
 				
-			<br><br><br><br><br><br><br><br>
+				<div class="chart">
+					<table>
+						<thead>
+							<tr class="top">
+								<th class="line_top">2022/07/24 - 2022/07/30</th>
+								<th class="mark">
+									<button class="bookmark">
+										<img class="image" src="../../../assets/image/together/bookmarks_white.png">
+									</button>
+								</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<th colspan="2" class="content">쭈쭈네 동네 한바퀴</th>
+							</tr>
+							<tr>
+								<th colspan="2" class="content_course"><span class="glyphicon glyphicon-map-marker" class="marking"></span>신림 - 잠실</th>
+							</tr>
+							<tr>
+								<th colspan="2" class="line_bottom">
+									산책
+									<button type="submit" class="join"><span class="glyphicon glyphicon-user" id="join_icon"></span>11/15</button>
+								</th>
+							</tr>
+						</tbody>
+					</table>
+				</div><!-- table(chart) -->
+	
+				<div class="chart">
+					<table>
+						<thead>
+							<tr class="top">
+								<th class="line_top">2022/07/24 - 2022/07/30</th>
+								<th class="mark">
+									<button class="bookmark">
+										<img class="image" src="../../../assets/image/together/bookmarks_white.png">
+									</button>
+								</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<th colspan="2" class="content">쭈쭈네 동네 한바퀴</th>
+							</tr>
+							<tr>
+								<th colspan="2" class="content_course"><span class="glyphicon glyphicon-map-marker" class="marking"></span>신림 - 잠실</th>
+							</tr>
+							<tr>
+								<th colspan="2" class="line_bottom">
+									산책
+									<button type="submit" class="join"><span class="glyphicon glyphicon-user" id="join_icon"></span>11/15</button>
+								</th>
+							</tr>
+						</tbody>
+					</table>
+				</div><!-- table(chart) -->
+				
+				<div class="chart">
+					<table>
+						<thead>
+							<tr class="top">
+								<th class="line_top">2022/07/24 - 2022/07/30</th>
+								<th class="mark">
+									<button class="bookmark">
+										<img class="image" src="../../../assets/image/together/bookmarks_white.png">
+									</button>
+								</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<th colspan="2" class="content">쭈쭈네 동네 한바퀴</th>
+							</tr>
+							<tr>
+								<th colspan="2" class="content_course"><span class="glyphicon glyphicon-map-marker" class="marking"></span>신림 - 잠실</th>
+							</tr>
+							<tr>
+								<th colspan="2" class="line_bottom">
+									산책
+									<button type="submit" class="join"><span class="glyphicon glyphicon-user" id="join_icon"></span>11/15</button>
+								</th>
+							</tr>
+						</tbody>
+					</table>
+				</div><!-- table(chart) -->
+			</div>
+				
+			<br>
 				
 			<div id="more_btn">
 				<button type="submit" id="more">
