--- a/webapp/WEB-INF/views/best/bestplus.html
+++ b/webapp/WEB-INF/views/best/bestplus.html
@@ -33,6 +33,7 @@
 			<!-- nav -->
 		</div>
 <!---------------------------------------- header --------------------------------------->
+	<div class="content"> 	
 		<h1>Best</h1>
 
 		<!-- main list -->
@@ -49,13 +50,13 @@
 			<p>총(개) : 15</p>
 
 			<ul>
-				<li><a href="">산책 | </a></li>
-				<li><a href="">조깅 | </a></li>
-				<li><a href="">런닝 | </a></li>
-				<li><a href="">마라톤 | </a></li>
-				<li><a href="">자전거 | </a></li>
-				<li><a href="">뛰기 | </a></li>
-				<li><a href="">그림그리기 </a></li>
+				<li><a href=""><span>산책</span> | </a></li>
+				<li><a href=""><span>조깅</span> | </a></li>
+				<li><a href=""><span>런닝</span> | </a></li>
+				<li><a href=""><span>마라톤</span> | </a></li>
+				<li><a href=""><span>자전거</span> | </a></li>
+				<li><a href=""><span>뛰기</span> | </a></li>
+				<li><a href=""><span>그림그리기</span> </a></li>
 			</ul>
 		</div>
 
@@ -81,15 +82,97 @@
 
 			<div class="img-line">
 				<div class="img-list">
-					<a href=""> <img
-						src="C:\javaStudy\workspace_web\JOA\webapp\assets\images\poo613.jpg" />
+					<a href=""> <img src="C:\javaStudy\JOA_GroupProject\webapp\assets\image\sw1.jpg" />
 						<span id="best-text"> 지역 : <span>서울</span> | 거리 : <span>1km</span></span></a>
 				
 					<div class="comment-text">
 						<input type="text" name="comment" value="私の名前はウヨンウです。" size="43"><a href=""></a> 
 							<input type="text" name="comment" value="댓글이오" size="43"><a href=""></a> 
 							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="43"><a href=""></a> <br> 
-							<input type="button" name="button" value="더보기">
+							<input type="button" id="cbutton" name="button" value="후기 : 3개" >
+					</div>
+				</div>
+
+				<div class="img-list">
+					<a href=""> <img src="C:\javaStudy\JOA_GroupProject\webapp\assets\image\best\map.jpg" />
+						<span id="best-text"> 지역 : <span>부산</span> | 거리 : <span>1km</span></span></a>
+					<div class="comment-text">
+						<input type="text" name="comment" value="私の名前はウヨンウです。" size="43"><a href=""></a> 
+							<input type="text" name="comment" value="댓글이오" size="43"><a href=""></a> 
+							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="43"><a href=""></a> <br> 
+							<input type="button" id="cbutton" name="button" value="후기 : 3개">
+					</div>
+				</div>
+				
+				<div class="img-list">
+					<a href=""> <img src="C:\javaStudy\workspace_web\JOA\webapp\assets\images\poo613.jpg" />
+						<span id="best-text"> 지역 : <span>인천</span> | 거리 : <span>1km</span></span></a>
+					<div class="comment-text">
+						<input type="text" name="comment" value="私の名前はウヨンウです。" size="43"><a href=""></a> 
+							<input type="text" name="comment" value="댓글이오" size="43"><a href=""></a> 
+							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="43"><a href=""></a> <br> 
+							<input type="button" id="cbutton" name="button" value="후기 : 3개">					</div>
+				</div>
+			</div>
+		</div>
+
+		<br> <br> <br>
+
+		<hr class="one">
+
+		<!-- Top 4~6 -->
+		<div class="img-total2">
+			<div class="img-line">
+				<p> <span>ε♡з</span> Top 4 ~ 6</p>
+			
+				<div class="img-list">
+					<a href=""> <img src="C:\javaStudy\JOA_GroupProject\webapp\assets\image\best\map.jpg" />
+						<span id="best-text"> 지역 : <span>서울</span> | 거리 : <span>1km</span></span></a>
+					<div class="comment-text">
+						<input type="text" name="comment" value="私の名前はウヨンウです。" size="43"><a href=""></a> 
+							<input type="text" name="comment" value="댓글이오" size="43"><a href=""></a> 
+							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="43"><a href=""></a> <br> 
+							<input type="button" id="cbutton" name="button" value="후기 : 3개">
+					</div>
+				</div>
+
+				<div class="img-list">
+					<a href=""> <img src="C:\javaStudy\JOA_GroupProject\webapp\assets\image\best\map.jpg" />
+						<span id="best-text"> 지역 : <span>부산</span> | 거리 : <span>1km</span></span></a>
+					<div class="comment-text">
+						<input type="text" name="comment" value="私の名前はウヨンウです。" size="43"><a href=""></a> 
+							<input type="text" name="comment" value="댓글이오" size="43"><a href=""></a> 
+							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="43"><a	href=""></a> <br> 
+							<input type="button" id="cbutton" name="button" value="후기 : 0개">
+					</div>
+				</div>
+
+				<div class="img-list">
+					<a href=""> <img src="C:\javaStudy\workspace_web\JOA\webapp\assets\images\poo613.jpg" />
+						<span id="best-text"> 지역 : <span>인천</span> | 거리 : <span>1km</span></span></a>
+					<div class="comment-text">
+						<input type="text" name="comment" value="私の名前はウヨンウです。" size="43"><a href=""></a> 
+							<input type="text" name="comment" value="댓글이오" size="43"><a href=""></a> 
+							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="43"><a href=""></a> <br> 
+							<input type="button" id="cbutton" name="button" value="후기 : 0개">
+					</div>
+				</div>
+			</div>
+		</div>
+		
+		<!-- Top 7~9 -->
+		<div class="img-total2">
+			<div class="img-line">
+				<p> <span>ε♡з</span> Top 7 ~ 9</p>
+			
+				<div class="img-list">
+					<a href=""> <img src="C:\javaStudy\JOA_GroupProject\webapp\assets\image\best\map.jpg" />
+						<span id="best-text"> 지역 : <span>서울</span> | 거리 : <span>1km</span></span></a>
+					<div class="comment-text">
+						<input type="text" name="comment" value="私の名前はウヨンウです。" size="43"><a href=""></a> 
+							<input type="text" name="comment" value="댓글이오" size="43"><a href=""></a> 
+							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="43"><a href=""></a> <br> 
+							<input type="button" id="cbutton" name="button" value="후기 : 3개">
 					</div>
 				</div>
 
@@ -99,32 +182,135 @@
 					<div class="comment-text">
 						<input type="text" name="comment" value="私の名前はウヨンウです。" size="43"><a href=""></a> 
 							<input type="text" name="comment" value="댓글이오" size="43"><a href=""></a> 
-							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="43"><a href=""></a> <br> 
-							<input type="button" name="button" value="더보기">
+							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="43"><a	href=""></a> <br> 
+							<input type="button" id="cbutton" name="button" value="후기 : 0개">
 					</div>
 				</div>
-				
+
 				<div class="img-list">
-					<a href=""> <img
-						src="C:\javaStudy\workspace_web\JOA\webapp\assets\images\poo613.jpg" />
+					<a href=""> <img src="C:\javaStudy\JOA_GroupProject\webapp\assets\image\best\map.jpg" />
+						<span id="best-text"> 지역 : <span>인천</span> | 거리 : <span>1km</span></span></a>
+					<div class="comment-text">
+						<input type="text" name="comment" value="私の名前はウヨンウです。" size="43"><a href=""></a> 
+							<input type="text" name="comment" value="댓글이오" size="43"><a href=""></a> 
+							<input type="text" id="cbutton" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="43"><a href=""></a> <br> 
+							<input type="button" name="button" value="후기 : 0개">
+					</div>
+				</div>
+			</div>
+		</div>
+		
+				
+		<!-- Top 10~12 -->		
+		<div class="img-total2">
+			<div class="img-line">
+				<p> <span>ε♡з</span> Top 10 ~ 12</p>
+			
+				<div class="img-list">
+					<a href=""> <img src="C:\javaStudy\workspace_web\JOA\webapp\assets\images\poo613.jpg" />
+						<span id="best-text"> 지역 : <span>서울</span> | 거리 : <span>1km</span></span></a>
+					<div class="comment-text">
+						<input type="text" name="comment" value="私の名前はウヨンウです。" size="43"><a href=""></a> 
+							<input type="text" name="comment" value="댓글이오" size="43"><a href=""></a> 
+							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="43"><a href=""></a> <br> 
+							<input type="button" id="cbutton" name="button" value="후기 : 3개">
+					</div>
+				</div>
+
+				<div class="img-list">
+					<a href=""> <img src="C:\javaStudy\workspace_web\JOA\webapp\assets\images\poo613.jpg" />
+						<span id="best-text"> 지역 : <span>부산</span> | 거리 : <span>1km</span></span></a>
+					<div class="comment-text">
+						<input type="text" name="comment" value="私の名前はウヨンウです。" size="43"><a href=""></a> 
+							<input type="text" name="comment" value="댓글이오" size="43"><a href=""></a> 
+							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="43"><a	href=""></a> <br> 
+							<input type="button" id="cbutton" name="button" value="후기 : 0개">
+					</div>
+				</div>
+
+				<div class="img-list">
+					<a href=""> <img src="C:\javaStudy\JOA_GroupProject\webapp\assets\image\best\map.jpg" />
 						<span id="best-text"> 지역 : <span>인천</span> | 거리 : <span>1km</span></span></a>
 					<div class="comment-text">
 						<input type="text" name="comment" value="私の名前はウヨンウです。" size="43"><a href=""></a> 
 							<input type="text" name="comment" value="댓글이오" size="43"><a href=""></a> 
 							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="43"><a href=""></a> <br> 
-							<input type="button" name="button" value="더보기">
+							<input type="button"  id="cbutton"name="button" value="후기 : 0개">
 					</div>
 				</div>
 			</div>
+		</div>	
+		
+		
+		<!-- Top 13~15 -->		
+		<div class="img-total2">
+			<div class="img-line">
+				<p> <span>ε♡з</span> Top 13 ~ 15</p>
+			
+				<div class="img-list">
+					<a href=""> <img src="C:\javaStudy\workspace_web\JOA\webapp\assets\images\poo613.jpg" />
+						<span id="best-text"> 지역 : <span>서울</span> | 거리 : <span>1km</span></span></a>
+					<div class="comment-text">
+						<input type="text" name="comment" value="私の名前はウヨンウです。" size="43"><a href=""></a> 
+							<input type="text" name="comment" value="댓글이오" size="43"><a href=""></a> 
+							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="43"><a href=""></a> <br> 
+							<input type="button" id="cbutton" name="button" value="후기 : 3개">
+					</div>
+				</div>
+
+				<div class="img-list">
+					<a href=""> <img src="C:\javaStudy\JOA_GroupProject\webapp\assets\image\best\map.jpg" />
+						<span id="best-text"> 지역 : <span>부산</span> | 거리 : <span>1km</span></span></a>
+					<div class="comment-text">
+						<input type="text" name="comment" value="私の名前はウヨンウです。" size="43"><a href=""></a> 
+							<input type="text" name="comment" value="댓글이오" size="43"><a href=""></a> 
+							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="43"><a	href=""></a> <br> 
+							<input type="button" id="cbutton" name="button" value="후기 : 0개">
+					</div>
+				</div>
+
+				<div class="img-list">
+					<a href=""> <img src="C:\javaStudy\workspace_web\JOA\webapp\assets\images\poo613.jpg" />
+						<span id="best-text"> 지역 : <span>인천</span> | 거리 : <span>1km</span></span></a>
+					<div class="comment-text">
+						<input type="text" name="comment" value="私の名前はウヨンウです。" size="43"><a href=""></a> 
+							<input type="text" name="comment" value="댓글이오" size="43"><a href=""></a> 
+							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="43"><a href=""></a> <br> 
+							<input type="button" id="cbutton" name="button" value="후기 : 0개">
+					</div>
+				</div>
+			</div>
+		</div>		
+	</div>			
+				
+				
+		<!------------------ footer -------------------->
+		<div class="footer">
+			<div class="footer-text">
+				<p>주식회사 조아</p>
+				<p>대표 : 최보승</p>
+				<p>사업자 번호 : 123-456-789</p>
+				<p>서울특별시 관악구 봉천동 862 - 1</p>
+				<br>
+				<p>고객센터 | 평일 9 : 30 ~ 18 : 30, 점심시간 : 12 : 00 ~ 13 : 00 (토, 일요일,
+					공휴일 휴무)</p>
+				<p>Tel. 02 - 1111 - 1111</p>
+				<p>Fax. 02 - 1111 - 1111</p>
+				<p>Email. joa@joa.co.kr</p>
+			</div>
+			<br>
+			<div class="footer-btn">
+				<button id="footerbtn" type="button">자주묻는 질문</button>
+				<button id="footerbtn" type="button">1:1 문의</button>
+			</div>
+			<br>
+			<hr class="my-hr1">
+			<p id="footer-Copyright">JOA, Inc. All rights reserved.</p>
+
 		</div>
-
-		<br> <br> <br>
-
-		<hr class="one">
-
-		<!-- Top4~6 -->
-
-
+		<!-- /footer -->			
+			
+			
 	</div>
 
 </body>
