--- a/webapp/WEB-INF/views/main/index.html
+++ b/webapp/WEB-INF/views/main/index.html
@@ -88,9 +88,9 @@
 				<br>
 				<p>고객센터 | 평일 9 : 30 ~ 18 : 30, 점심시간 : 12 : 00 ~ 13 : 00 (토, 일요일,
 					공휴일 휴무)</p>
-				<p>tel. 02 - 1111 - 1111</p>
-				<p>fax. 02 - 1111 - 1111</p>
-				<p>email. joa@joa.co.kr</p>
+				<p>Tel. 02 - 1111 - 1111</p>
+				<p>Fax. 02 - 1111 - 1111</p>
+				<p>Email. joa@joa.co.kr</p>
 			</div>
 			<br>
 			<div class="footer-btn">
